--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
     <h1>Elevative</h1>
     <p>This is the first time</p>
     <p>This is the first time</p>
+    <a href="/newPage.html"></a>
 </body>
 </html>
+
+<!-- 
+    what I like:
+    - side pane and how it shows everything
+    - the simplicity of 3 colours
+    - different tags
+        - each on has sub tags 
+        - includes the dates
+    - top nav with main pages
+ -->
