--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Elevative</h1>
     <p>This is the first time</p>
     <p>This is the first time</p>
-    <a href="/newPage.html"></a>
+    <a href="/Elevative/newPage.html"></a>
 </body>
 </html>
 
